Convert builds to use UBI9 instead of CentOS 6 (#14964)
Motivation:
CentOS 6 is ancient, and we want to build Netty 5 on a more modern
platform.
We should also add builds for Java 23 and Java 24.

Modification:
- Change the docker compose files to be based on the UBI9 docker image
instead of the CentOS 6 one.
- Remove the explicit tcnative classifier override from the build
commands, as they are no longer needed.
- Update all the github workflows to use the UBI9 docker compose files.
- Update the github PR workflows to explicitly specify the java_version
argument.
- Change all the builds to only test with the `boringssl-static` version
of tcnative, because OpenSSL 1.x is not available on UBI9.
- Add Java 23 and 24 builds to the PR matrix.
- Remove the `--illegal-access=deny` command from the build, as it has
no effect after Java 17.
- Remove test that rely on overriding the `SecurityManager`, which is no
longer possible after Java 23.
- Add Blockhound build profiles for Java 23 and Java 24.
- Fix the build with the adaptive allocator, as it was being ignored due
to docker compose files not setting a docker image for it.
- Fix the `SSLEngineTest` on Java 24, which now [rejects TLS connections
that use the TLS_RSA_WITH_AES_128_CBC_SHA
cipher](https://jdk.java.net/24/release-notes#JDK-8341964).

Result:
All Netty 5 builds now use UBI9, except for the cross-compilation
builds.