@@ -57,7 +57,6 @@
           <showWarnings>true</showWarnings>
           <compilerArgs>
             <arg>-Xlint:-options</arg>
-            <arg>--enable-preview</arg>
           </compilerArgs>
           <meminitial>256m</meminitial>
           <maxmem>1024m</maxmem>
